fix(demo): scrollbar layout issue resolved

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -1,4 +1,4 @@
-// Globals
+// globals
 
 * {
   box-sizing: border-box;
@@ -22,6 +22,7 @@
 
 html {
   font-size: 16px;
+  scrollbar-gutter: stable;
 }
 
 html,
